--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,6 +37,15 @@ environment:
       QTDIR: C:\Qt\5.10.1\msvc2015
 
 install:
+  - echo "clone, compile and install ECM..."
+  - git clone git://anongit.kde.org/extra-cmake-modules
+  - cd extra-cmake-modules
+  - mkdir build
+  - cd build
+  - cmake .. # or run : cmake -DCMAKE_INSTALL_PREFIX=/usr .. &&
+  - make
+  - make install
+  - echo "Downloading Falkon-master.zip..."
   - appveyor DownloadFile "https://github.com/KDE/falkon/archive/master.zip"
   - 7z x "master.zip"
   - cd falkon-master
