Fix test script

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -71,10 +71,8 @@ build_script:
   - call %MAKETOOL%
 
 test_script:
-  - cd %QZ_DIR%\tests\autotests
-  - qmake CONFIG+=%CONFIGURATION% INCLUDEPATH+="%OPENSSL_DIR%\include" LIBS+=-L%OPENSSL_DIR%\lib
-  - call %MAKETOOL%
-  - call %CONFIGURATION%\autotests.exe
+  - cd %FK_DIR%\bin
+  - call autotests.exe
 
 after_build:
   # prepare dependencies
