--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,14 +37,14 @@ environment:
       QTDIR: C:\Qt\5.10.1\msvc2015
 
 install:
-  - echo "clone, compile and install ECM..."
+  - echo "Clone, compile and install ECM..."
   - git clone git://anongit.kde.org/extra-cmake-modules
   - cd extra-cmake-modules
   - mkdir build
   - cd build
-  - cmake .. # or run : cmake -DCMAKE_INSTALL_PREFIX=/usr .. &&
-  - make
-  - make install
+  - cmake  -G "NMake Makefiles JOM" .. # or run : cmake -DCMAKE_INSTALL_PREFIX=/usr .. &&
+  - call %MAKETOOL%
+  - call %MAKETOOL% install
   - echo "Downloading Falkon-master.zip..."
   - cd ../..
   #- appveyor DownloadFile "https://github.com/KDE/falkon/archive/master.zip"
