--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,6 +47,16 @@ install:
   - call %MAKETOOL% install
   - echo "Downloading Falkon-master.zip..."
   - cd ../..
+  - echo "Clone, compile and install KI18N..."
+  - git clone git://anongit.kde.org/ki18n.git
+  - cd ki18n
+  - mkdir build
+  - cd build
+  - cmake  -G "NMake Makefiles JOM" ..
+  - call %MAKETOOL%
+  - call %MAKETOOL% install
+  - cd ../..
+  - echo "Downloading source of Falkon..."
   #- appveyor DownloadFile "https://github.com/KDE/falkon/archive/master.zip"
   - appveyor DownloadFile "https://github.com/KDE/falkon/archive/Falkon/3.0.zip"
   #- 7z x "master.zip"
