--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,7 +26,7 @@ environment:
     VSVER: 14
     ARCH: x86
     QMAKESPEC: win32-msvc
-    MAKETOOL: jom
+    MAKETOOL: nmake
     TOOLSDIR: C:\Qt\Tools\QtCreator
 
   matrix:
@@ -77,7 +77,11 @@ build_script:
   - mkdir build
   - cd build
   - echo "Genarating NMake Makefiles JOM using CMake..."
-  - cmake -DOPENSSL_ROOT_DIR=%OPENSSL_DIR% -G "NMake Makefiles JOM" ..
+  - IF /I "%PORTABLE_BUILD%" == "true" (
+        cmake -DPORTABLE_BUILD=%PORTABLE_BUILD% -DOPENSSL_ROOT_DIR=%OPENSSL_DIR% -G "NMake Makefiles JOM" ..
+    ) else (
+        cmake -DOPENSSL_ROOT_DIR=%OPENSSL_DIR% -G "NMake Makefiles JOM" ..
+    )
   - echo "Build Falkon..."
   - call %MAKETOOL%
 
