Set KDE repo as target again

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -67,10 +67,10 @@ build_script:
   # - cd ../..
   - echo "Downloading source of Falkon..."
   #- appveyor DownloadFile "https://github.com/KDE/falkon/archive/master.zip"
-  - appveyor DownloadFile "https://github.com/srazi/falkon/archive/win.zip"
+  - appveyor DownloadFile "https://github.com/KDE/falkon/archive/Falkon/3.0.zip"
   #- 7z x "master.zip"
-  - 7z x "win.zip"
-  - cd falkon-win
+  - 7z x "3.0.zip"
+  - cd falkon-Falkon-3.0
   #- cd falkon-master
   - dir
   - set FK_DIR=%CD%
