--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,8 +34,6 @@ environment:
     - QTDIR: C:\Qt\5.10.1\msvc2015
     - ARCH: x64
       QTDIR: C:\Qt\5.10.1\msvc2015_64
-    - PORTABLE_BUILD: "true"
-      QTDIR: C:\Qt\5.10.1\msvc2015
 
 install:
   - set CPU=32
@@ -189,6 +187,6 @@ deploy:
 init:
   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
-# remote desktop connection on finish and block build to not destroy VM
-on_finish:
-  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+# # remote desktop connection on finish and block build to not destroy VM
+# on_finish:
+  # - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
