--- a/appveyor.yml
+++ b/appveyor.yml
@@ -161,11 +161,11 @@ after_build:
     )
 
 artifacts:
-   - path: falkon-Falkon-3.0\windows\Falkon*Installer*.exe
+   - path: falkon-Falkon-*\windows\Falkon*Installer*.exe
      name: Falkon Installer (%ARCH%)
-   - path: falkon-Falkon-3.0\build\bin\*.exe
+   - path: falkon-Falkon-*\build\bin\*.exe
      name: Falkon Executable (%ARCH%)
-   - path: falkon-Falkon-3.0\build\bin\*.dll
+   - path: falkon-Falkon-*\build\bin\*.dll
      name: Falkon DLL (%ARCH%)
 
 
